allowed webpage to load image from api

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             </div>
             <div class="artwork">
                 <button id="loadArt">Load Artwork</button>
-                <img id="art">
+                <div id="artImg">
+                </div>
             </div>
             <div class="guessing">
                 <p>Who is the artist of this work?</p>
