--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="artwork">
                 <button id="loadArt">Load Artwork</button>
-                <div id="artImg">
+                <div id="artImgContainer">
                 </div>
             </div>
             <div class="guessing">
