took in & validated user input

--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
                 <p></p>
             </div>
             <div class="previousGuesses">
-                <ol>
-                    <li id="firstGuess"></li>
-                    <li id="secondGuess"></li>
-                    <li id="thirdGuess"></li>
-                    <li id="fourthGuess"></li>
-                    <li id="fifthGuess"></li>
+                <ol id="guessesList">
+                    
                 </ol>
+            </div>
+
+            <div class="popup" id="popup">
+                <h2>Congrats!</h2>
+                <div id="popup-text">You correctly guessed the artist!</div>
+                <button id="closepopup">OK</button>
             </div>
         </main>
 
