made header & buttons

--- a/index.html
+++ b/index.html
@@ -15,9 +15,30 @@
 
     <body>
         <main>
-            <div class="container">
-                <div class="centered">Guess the Artist</div>
-            </div>
+            <header>
+                <div class="container">
+                    <div class="centered">Guess the Artist</div>
+                </div>
+                <div class="instructions">
+                    <button id="showInstructions">
+                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="64px" height="64px" viewBox="-105.28 -105.28 573.59 573.59" xml:space="preserve" fill="#000000" transform="rotate(0)">
+                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                            <g id="SVGRepo_iconCarrier"> 
+                                <g> 
+                                    <g> 
+                                        <path style="fill:#030303;" d="M181.512,363.024C81.43,363.024,0,281.601,0,181.513C0,81.424,81.43,0,181.512,0 c100.083,0,181.513,81.424,181.513,181.513C363.025,281.601,281.595,363.024,181.512,363.024z M181.512,11.71 C87.88,11.71,11.71,87.886,11.71,181.513s76.17,169.802,169.802,169.802c93.633,0,169.803-76.175,169.803-169.802 S275.145,11.71,181.512,11.71z"></path> 
+                                    </g> 
+                                    <g> 
+                                        <path style="fill:#030303;" d="M163.444,221.184l-0.546-7.124c-1.644-14.805,3.291-30.98,16.994-47.426 c12.336-14.521,19.187-25.213,19.187-37.55c0-13.98-8.771-23.298-26.037-23.572c-9.872,0-20.833,3.29-27.684,8.497l-6.582-17.268 c9.046-6.582,24.667-10.968,39.194-10.968c31.526,0,45.771,19.464,45.771,40.292c0,18.641-10.413,32.073-23.564,47.694 c-12.065,14.249-16.451,26.314-15.625,40.289l0.275,7.125h-21.383V221.184z M157.411,259.558c0-10.139,6.853-17.269,16.448-17.269 c9.592,0,16.174,7.13,16.174,17.269c0,9.595-6.308,16.988-16.448,16.988C163.993,276.546,157.411,269.152,157.411,259.558z"></path> 
+                                    </g> 
+                                </g> 
+                            </g>
+                        </svg>
+                    </button>
+                </div>
+            </header>
+
             <div class="artwork">
                 <button id="loadArt">Load Artwork</button>
                 <div id="artImgContainer">
