made instruction button & popup

--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
                         </svg>
                     </button>
                 </div>
+                <div class="instructionPopup" id="instructionPopup">
+
+                <h2>How to Play</h2>
+                <div id="instruction-text">
+                    <p>Click load artwork to load up a random artwork.</p>
+                    <p>Type in your guess in the input area. You have five guesses to get it right!</p>
+                    <p>For the artist name, you can type in either first and last name or just last name.</p>
+                    <p>However, spelling does matter, so be sure to you spell their name correctly.</p>
+                    <p>If you guess correctly, you win! Good luck and have fun!</p>
+                </div>
+            </div>
             </header>
 
             <div class="artwork">
@@ -63,6 +74,7 @@
                 <div id="popup-text">You correctly guessed the artist!</div>
                 <button id="closepopup">OK</button>
             </div>
+
         </main>
 
     </body>
