--- a/index.html
+++ b/index.html
@@ -37,17 +37,6 @@
                         </svg>
                     </button>
                 </div>
-                <div class="instructionPopup" id="instructionPopup">
-
-                <h2>How to Play</h2>
-                <div id="instruction-text">
-                    <p>Click load artwork to load up a random artwork.</p>
-                    <p>Type in your guess in the input area. You have five guesses to get it right!</p>
-                    <p>For the artist name, you can type in either first and last name or just last name.</p>
-                    <p>However, spelling does matter, so be sure to you spell their name correctly.</p>
-                    <p>If you guess correctly, you win! Good luck and have fun!</p>
-                </div>
-            </div>
             </header>
 
             <div class="artwork">
@@ -75,6 +64,26 @@
                 <button id="closepopup">OK</button>
             </div>
 
+            <div class="instructionPopup" id="instructionPopup">
+                <button id="closeInstructions">
+                    <svg width="64px" height="64px" viewBox="-10.56 -10.56 45.12 45.12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                        <g id="SVGRepo_iconCarrier"> 
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M5.29289 5.29289C5.68342 4.90237 6.31658 4.90237 6.70711 5.29289L12 10.5858L17.2929 5.29289C17.6834 4.90237 18.3166 4.90237 18.7071 5.29289C19.0976 5.68342 19.0976 6.31658 18.7071 6.70711L13.4142 12L18.7071 17.2929C19.0976 17.6834 19.0976 18.3166 18.7071 18.7071C18.3166 19.0976 17.6834 19.0976 17.2929 18.7071L12 13.4142L6.70711 18.7071C6.31658 19.0976 5.68342 19.0976 5.29289 18.7071C4.90237 18.3166 4.90237 17.6834 5.29289 17.2929L10.5858 12L5.29289 6.70711C4.90237 6.31658 4.90237 5.68342 5.29289 5.29289Z" fill="#0F1729"></path> 
+                        </g>
+                    </svg>
+                </button>
+
+                <div id="instruction-text">
+                    <h2>How to Play</h2>
+                    <p>Click load artwork to load up a random artwork.</p>
+                    <p>Type in your guess in the input area. You have five guesses to get it right!</p>
+                    <p>For the artist name, you can type in either first and last name or just last name.</p>
+                    <p>However, spelling does matter, so be sure to you spell their name correctly.</p>
+                    <p>If you guess correctly, you win! Good luck and have fun!</p>
+                </div>
+            </div>
         </main>
 
     </body>
