added see more page (initial)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
             <link rel="stylesheet" href="style.css">
         
-            <script src="script.js" defer></script>
+            <script type="module" src="script.js" defer></script>
 
 
     </head>
@@ -79,6 +79,11 @@
                 <h2>Congrats!</h2>
                 <div id="popup-text">
                     <p>You correctly guessed the artist!</p>
+                </div>
+                <div class="popupSeeMore">
+                    <a id="popupSeeMore">
+
+                    </a>
                 </div>
             </div>
 
