added second page for see more art by

--- a/seemore.html
+++ b/seemore.html
@@ -8,7 +8,7 @@
 
             <link rel="stylesheet" href="style.css">
         
-            <script type="module" src="app.js" defer></script>
+            <script src="app.js" defer></script>
     </head>
 
     <body>
@@ -18,7 +18,10 @@
                     <div class="centered">Guess the Artist</div>
                 </div>
             </header>
+            <a href="index.html">Go back to game</a>
+            <div id="moreArtContainer">
 
+            </div>
 
         </main>
     </body>
