--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
             <link rel="stylesheet" href="style.css">
         
-            <script type="module" src="script.js" defer></script>
+            <script src="script.js" defer></script>
 
 
     </head>
@@ -81,7 +81,7 @@
                     <p>You correctly guessed the artist!</p>
                 </div>
                 <div class="popupSeeMore">
-                    <a id="popupSeeMore">
+                    <a id="popupSeeMore" href="seemore.html">
 
                     </a>
                 </div>
