final styling and formatting for everything

--- a/index.html
+++ b/index.html
@@ -39,23 +39,29 @@
                 </div>
             </header>
 
-            <div class="artwork">
-                <button id="loadArt">Load Artwork</button>
-                <div id="artImgContainer">
+            <div class="bigContainer">
+                <div class="artwork">
+                    <button id="loadArt">Load Artwork</button>
+                    <div id="artImgContainer">
+                    </div>
                 </div>
-            </div>
-            <div class="guessing">
-                <p>Who is the artist of this work?</p>
-                <input type="text" id="guessInput" placeholder="Enter artist name">
-                <button id="submitGuess">Submit Guess</button>
-            </div>
-            <div id="guessesLeft">
-                <p></p>
-            </div>
-            <div class="previousGuesses">
-                <ol id="guessesList">
+            
+                <div class="rightdoc">
+                    <div class="guessing">
+                        <p>Who is the artist of this work?</p>
+                        <input type="text" id="guessInput" placeholder="Enter artist name">
+                        <button id="submitGuess">Submit Guess</button>
+                    </div>
+                    <div id="guessesLeft">
+
+                    </div>
+                    <div class="previousGuesses">
+                        <h3>Your Guesses</h3>
+                        <ul id="guessesList" type="1">
                     
-                </ol>
+                        </ol>
+                    </div>
+                </div>
             </div>
 
             <div class="popup" id="popup">
