--- a/seemore.html
+++ b/seemore.html
@@ -18,9 +18,11 @@
                     <div class="centered">Guess the Artist</div>
                 </div>
             </header>
-            <a href="index.html">Go back to game</a>
-            <div id="moreArtContainer">
+            <a id="goBack" href="index.html">Go back to game</a>
+            <div id="moreArtContainerContainer">
+                <div id="moreArtContainer">
 
+                </div>
             </div>
 
         </main>
